--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "format": "biome format --write src"
   },
   "dependencies": {
+    "@fontsource-variable/material-symbols-rounded": "^5.2.30",
     "@tailwindcss/vite": "^4.1.17",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
