--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "clsx": "^2.1.1",
     "solid-js": "^1.9.10",
     "solid-styled-components": "^0.28.5",
+    "solid-toast": "^0.5.0",
+    "solidjs-use": "^2.3.0",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.17"
   },
