--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -18,7 +18,7 @@
     "jsxImportSource": "solid-js",
     "baseUrl": ".",
     "paths": {
-      "*": ["./src/*", "./node_modules/*"]
+      "@/*": ["src/*"]
     },
 
     /* Linting */
