--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "lint": "biome lint src",
     "format": "biome check --write src",
     "test": "vitest",
-    "test:run": "vitest run"
+    "test:run": "vitest run",
+    "test:gcode:fixture": "tsx --tsconfig tsconfig.app.json scripts/generate-gcode-fixture.ts"
   },
   "dependencies": {
     "@fontsource-variable/material-symbols-rounded": "^5.2.30",
@@ -32,6 +33,7 @@
     "@types/node": "^24.10.1",
     "@types/wicg-file-system-access": "^2023.10.7",
     "@vitest/coverage-v8": "^4.0.18",
+    "tsx": "^4.21.0",
     "typescript": "~5.9.3",
     "vite": "^7.2.4",
     "vite-plugin-solid": "^2.11.10",
