--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "format": "biome check --write src",
     "test": "vitest",
     "test:run": "vitest run",
-    "test:gcode:fixture": "tsx --tsconfig tsconfig.app.json scripts/generate-gcode-fixture.ts"
+    "test:gcode:fixture": "tsx --tsconfig tsconfig.app.json scripts/generate-gcode-fixture.ts",
+    "knip": "knip"
   },
   "dependencies": {
     "@fontsource-variable/material-symbols-rounded": "^5.2.30",
@@ -31,9 +32,10 @@
   },
   "devDependencies": {
     "@biomejs/biome": "^2.3.8",
-    "@types/node": "^24.10.1",
+    "@types/node": "^24.10.10",
     "@types/wicg-file-system-access": "^2023.10.7",
     "@vitest/coverage-v8": "^4.0.18",
+    "knip": "^5.83.0",
     "tsx": "^4.21.0",
     "typescript": "~5.9.3",
     "vite": "^7.2.4",
